<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World!</string>
    <string name="app_name">CS301W06_Project</string>
    <string name="back">Back</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="take">Take Photo</string>
    <string name="camera">Camera</string>
    <string name="detail">Photo Details</string>
    <string name="delete">Delete Photo</string>
    <string name="compare">Compare</string>
    <string name="tag">Tag Photo</string>
    <string name="advancesearch">Advanced Search</string>
    <string name="photocompare">Photo Comparison</string>
    <string name="discard">Discard</string>
    <string name="group">Select Group</string>
    <string name="keep">Keep Photo</string>
    <string name="photoreview">Photo Review</string>
    <string name="annotation">Add Annotation</string>
    <string name="Yes">Yes</string>
    <string name="datetaken">Date Taken: </string>
    <string name="tags">Tags: </string>
    <string name="description">Description</string>

</resources>