<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/camera_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/camera_take"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/take" />
    </LinearLayout>

    <Button
        android:id="@+id/camera_back"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />

</LinearLayout>