<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#B2C0C1"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/patientTextViewWrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainTitle" >

        <TextView
            android:id="@+id/patientTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:text="Photo Details"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#647373" />
    </LinearLayout>

    <ImageView
        android:id="@+id/det_photo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:contentDescription="@string/detail"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/details_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="#647373" />

    <TextView
        android:id="@+id/description_text"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_weight="1.25"
        android:textColor="#647373" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/details_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tags"
            android:textColor="#647373" />

        <TextView
            android:id="@+id/tag_text"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:textColor="#647373" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:textColor="#647373" >

        <TextView
            android:id="@+id/details_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datetaken"
            android:textColor="#647373" />

        <TextView
            android:id="@+id/date_text"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:textColor="#647373" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#EEEEEE"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/det_tag_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:contentDescription="@string/photoreview"
            android:src="@drawable/tag" />

        <ImageView
            android:id="@+id/det_compare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:contentDescription="@string/photoreview"
            android:src="@drawable/compare" />

        <ImageView
            android:id="@+id/det_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:contentDescription="@string/photoreview"
            android:src="@drawable/trash" />
    </LinearLayout>

</LinearLayout>